<resources>
    <string name="app_name">TCatris</string>

    <string name="msg_score">score</string>
    <string name="select_game">Select game</string>
    <string name="select_another_game">Select another game</string>
    <string name="select_game_confirm">Selecting another kind of game will reset current game progress.\nDo you want to continue?</string>
    <string name="top_scores">%s top scores</string>
    <string name="current_score">You</string>
    <string name="current_score_too_low">Current score (%d) isn\'t high enough to make it into scoreboard</string>
    <string name="btn_play_again">Play again</string>
    <string name="btn_continue">Continue</string>

    <string name="msg_gamestatus_failed">Game is finished\nPress Back to restart</string>
    <string name="msg_gamestatus_paused">Game is paused\nPress Back to resume</string>

    <string name="mnu_help">Help</string>
    <string name="mnu_about">About</string>
    <string name="mnu_settings">Settings</string>

    <string name="txt_about">TCatris v%s\nMulti-Tetris by TequilaCat\ntequilacat.org</string>

    <string name="settings">Settings</string>

    <string name="pref_sound_enable">Enable sound</string>
    <string name="pref_sound_enable_summ">Enable sounds on various game events such as rotation of shape or removing a line</string>

    <string name="pref_level_advance">Advance levels</string>
    <string name="pref_level_advance_summ">Make game more challenging by eventually increasing speed</string>

    <string name="pref_show_droptarget">Show dropped shape</string>
    <string name="pref_show_droptarget_summ">Show final location of current shape where it would rest</string>

</resources>
