<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/mnu_play_again"
        android:icon="@drawable/ic_replay_24dp"
        android:title="@string/btn_play_again"/>
    <item
        android:id="@+id/mnu_back_to_game"
        android:icon="@drawable/ic_arrow_back_24dp"
        android:title="@string/btn_continue"/>
    <item
        android:id="@+id/mnu_selectgame"
        android:icon="@drawable/ic_cancel_24dp"
        android:title="@string/select_another_game"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/mnu_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/settings"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/mnu_about"
        android:title="@string/mnu_about"/>
</menu>